--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,29 @@ All notable changes to this project will be documented in this file.
 Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 
 
+## [ 3.2-1 ] - 2021-06-01 ################################################
+
+### Added / Adicionado
+	- themepack2rpm and themepack2deb:
+		- Verification of invalid and not found files.
+	- Script:
+		- Commented scripts.
+
+### Changed / Modificado
+ - Script:
+	- Performance optimization for all scripts.
+	- Optimization for select parameters.
+###
+
+### Fixed / Corrigido
+ - Script:
+	- themepack2deb:
+		- Fix the control file generation function. 
+	- themepack2deb and themepack2rpm:
+		- Help not displayed when parameter was passed without a file.
+###
+
+
 ## [ 3.1-1 ] - 2021-06-01 ################################################
 
 ### Added / Adicionado
